--- a/package.xml
+++ b/package.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.5.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0
-http://pear.php.net/dtd/tasks-1.0.xsd
-http://pear.php.net/dtd/package-2.0
-http://pear.php.net/dtd/package-2.0.xsd">
+<package packagerversion="1.9.4" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
  <name>Validate_Finance</name>
  <channel>pear.php.net</channel>
  <summary>Validation class for Finance</summary>
  <description>Package to validate numbers/checksums/... that have to do with financial data. It currently includes checks for:
 * IBAN (International Bank Account Number, used for international bankwire transfers)
 * ISIN (International Securities Identification Number, identification number used for stocks)
-* identification-numbers found on Euro banknotes
- </description>
+* identification-numbers found on Euro banknotes</description>
  <lead>
   <name>Stefan Neufeind</name>
   <user>neufeind</user>
@@ -23,10 +19,10 @@ http://pear.php.net/dtd/package-2.0.xsd">
   <email>wormus@php.net</email>
   <active>yes</active>
  </lead>
- <date>2009-09-29</date>
- <time>01:00:00</time>
+ <date>2012-04-13</date>
+ <time>10:21:25</time>
  <version>
-  <release>0.5.5</release>
+  <release>0.5.6</release>
   <api>0.5.4</api>
  </version>
  <stability>
@@ -35,27 +31,18 @@ http://pear.php.net/dtd/package-2.0.xsd">
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-- changed license to PHP 3.01
-- coding-style fixes
-- code-improvements from #13007 submitted by kguest as part of a patch
-- IBAN: dropped support for CS (Serbia and Montenegro) - no longer exists
-- IBAN: added support for IL (Israel), MC (Monaco), ME (Montenegro), MU (Mauritius), SM (San Marino), RS (Serbia)
+QA release
+Bug #17412	Fatal error: Call to undefined method Validate_Finance_IBAN::iserror()
  </notes>
  <contents>
-  <dir name="/">
-   <dir name="tests">
-    <file name="validate_Finance.phpt" role="test" />
-    <file name="validate_ISIN.phpt" role="test" />
-   </dir> <!-- /tests -->
-   <dir name="Validate">
-    <dir name="Finance">
-     <file name="IBAN.php" role="php" />
-     <file name="ISIN.php" role="php" />
-    </dir> <!-- /Validate/Finance -->
-    <file name="Finance.php" role="php" />
-   </dir> <!-- /Validate -->
-   <file name="LICENSE" role="doc" />
-  </dir> <!-- / -->
+  <dir baseinstalldir="/" name="/">
+   <file baseinstalldir="/" md5sum="c3bacddee5eb2b398ad431042044a020" name="tests/validate_Finance.phpt" role="test" />
+   <file baseinstalldir="/" md5sum="3ccf5fc3a6afb5aee8983d34b174152f" name="tests/validate_ISIN.phpt" role="test" />
+   <file baseinstalldir="/" md5sum="6d482980ed8d4c50325653f252454300" name="Validate/Finance.php" role="php" />
+   <file baseinstalldir="/" md5sum="7906ebb7d7441d00f7d10c874158bc51" name="Validate/Finance/IBAN.php" role="php" />
+   <file baseinstalldir="/" md5sum="52cfe7be0bbf752838137688f58f898a" name="Validate/Finance/ISIN.php" role="php" />
+   <file baseinstalldir="/" md5sum="f8790e48b597dff12a643e08e9be3fab" name="LICENSE" role="doc" />
+  </dir>
  </contents>
  <dependencies>
   <required>
@@ -76,52 +63,35 @@ http://pear.php.net/dtd/package-2.0.xsd">
  <changelog>
   <release>
    <version>
-    <release>0.5.5</release>
-    <api>0.5.4</api>
+    <release>0.5.0</release>
+    <api>0.5.0</api>
    </version>
    <stability>
     <release>alpha</release>
     <api>alpha</api>
    </stability>
-   <date>2009-09-29</date>
-   <license uri="http://www.php.net/license">PHP License</license>
+   <date>2005-05-20</date>
+   <license>New BSD</license>
    <notes>
-- changed license to PHP 3.01
-- coding-style fixes
-- code-improvements from #13007 submitted by kguest as part of a patch
-- IBAN: dropped support for CS (Serbia and Montenegro) - no longer exists
-- IBAN: added support for IL (Israel), MC (Monaco), ME (Montenegro), MU (Mauritius), SM (San Marino), RS (Serbia)
+- split from Validate into independent package
+- removed apiVersion function from IBAN
+- make it depends on Validate &gt;= 0.5.0
    </notes>
   </release>
   <release>
    <version>
-    <release>0.5.4</release>
-    <api>0.5.4</api>
+    <release>0.5.1</release>
+    <api>0.5.1</api>
    </version>
    <stability>
     <release>alpha</release>
     <api>alpha</api>
    </stability>
-   <date>2007-01-23</date>
+   <date>2005-11-04</date>
    <license>New BSD</license>
    <notes>
-- added ISIN validation (thanks to Stephan Jakoubek)
-   </notes>
-  </release>
-  <release>
-   <version>
-    <release>0.5.3</release>
-    <api>0.5.3</api>
-   </version>
-   <stability>
-    <release>alpha</release>
-    <api>alpha</api>
-   </stability>
-   <date>2006-06-09</date>
-   <license>New BSD</license>
-   <notes>
-- added IBAN-check for Bulgaria
-- extended and corrected tests
+- Switch to the new BSD License
+(see http://www.opensource.org/licenses/bsd-license.php)
    </notes>
   </release>
   <release>
@@ -143,35 +113,68 @@ http://pear.php.net/dtd/package-2.0.xsd">
   </release>
   <release>
    <version>
-    <release>0.5.1</release>
-    <api>0.5.1</api>
+    <release>0.5.3</release>
+    <api>0.5.3</api>
    </version>
    <stability>
     <release>alpha</release>
     <api>alpha</api>
    </stability>
-   <date>2005-11-04</date>
+   <date>2006-06-09</date>
    <license>New BSD</license>
    <notes>
-- Switch to the new BSD License
-(see http://www.opensource.org/licenses/bsd-license.php)
+- added IBAN-check for Bulgaria
+- extended and corrected tests
    </notes>
   </release>
   <release>
    <version>
-    <release>0.5.0</release>
-    <api>0.5.0</api>
+    <release>0.5.4</release>
+    <api>0.5.4</api>
    </version>
    <stability>
     <release>alpha</release>
     <api>alpha</api>
    </stability>
-   <date>2005-05-20</date>
+   <date>2007-01-23</date>
    <license>New BSD</license>
    <notes>
-- split from Validate into independent package
-- removed apiVersion function from IBAN
-- make it depends on Validate &gt;= 0.5.0
+- added ISIN validation (thanks to Stephan Jakoubek)
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.5.5</release>
+    <api>0.5.4</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2009-09-29</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+- changed license to PHP 3.01
+- coding-style fixes
+- code-improvements from #13007 submitted by kguest as part of a patch
+- IBAN: dropped support for CS (Serbia and Montenegro) - no longer exists
+- IBAN: added support for IL (Israel), MC (Monaco), ME (Montenegro), MU (Mauritius), SM (San Marino), RS (Serbia)
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>0.5.6</release>
+    <api>0.5.4</api>
+   </version>
+   <stability>
+    <release>alpha</release>
+    <api>alpha</api>
+   </stability>
+   <date>2012-04-13</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+QA release
+Bug #17412	Fatal error: Call to undefined method Validate_Finance_IBAN::iserror()
    </notes>
   </release>
  </changelog>
